feat(loadtest): performed load test on the consume endpoint
